Add mongodb compose file
