# internal/stomatology_al/model_stomatology.go
@@ -1,0 +1,24 @@
+/*
+ * Appointment List Api
+ *
+ * Stomatology Appointment List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xdiscantiny@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package stomatology_al
+
+type Stomatology struct {
+
+	// Unique identifier of the ambulance
+	Id string `json:"id"`
+
+	// Human readable display name of the ambulance
+	Name string `json:"name"`
+
+	AppointmentList []AppointmentListEntry `json:"appointmentList,omitempty"`
+
+	DescriptionAppointment []AppointmentDescription `json:"descriptionAppointment,omitempty"`
+}
